# avtomatika

./: CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
docs/: api_reference.md  architecture.md  configuration.md  deployment.md  observability.md  observability_protocol.md
docs/cookbook/: README.md  advanced_topics.md  creating_a_blueprint.md  creating_blueprint.md  creating_worker.md
docs/es/: README.md  api_reference.md  architecture.md  configuration.md  deployment.md  observability.md  observability_protocol.md
docs/es/cookbook/: README.md  advanced_topics.md  creating_blueprint.md  creating_worker.md
docs/ru/: README.md  api_reference.md  architecture.md  configuration.md  deployment.md  observability.md  observability_protocol.md
docs/ru/cookbook/: README.md  advanced_topics.md  creating_blueprint.md  creating_worker.md
src/avtomatika/: __init__.py  api.html  app_keys.py  blueprint.py  blueprint_loader.py  client_config_loader.py  compression.py  config.py  constants.py  context.py  data_types.py  datastore.py  dispatcher.py  engine.py  executor.py  health_checker.py  logging_config.py  metrics.py  quota.py  ratelimit.py  reputation.py  s3.py  scheduler.py  scheduler_config_loader.py  security.py  telemetry.py  watcher.py  worker_config_loader.py  ws_manager.py
src/avtomatika/api/: handlers.py  routes.py
src/avtomatika/history/: base.py  noop.py  postgres.py  sqlite.py
src/avtomatika/services/: __init__.py  worker_service.py
src/avtomatika/storage/: __init__.py  base.py  memory.py  redis.py
src/avtomatika/utils/: __init__.py  crypto.py  json.py  schema.py  webhook_sender.py
tests/: clients.toml  conftest.py  storage_test_suite.py  test_advanced_dispatching.py  test_api_ownership.py  test_api_ownership_comprehensive.py  test_api_prefixes.py  test_blueprint_advanced_api.py  test_blueprint_conditions.py  test_blueprint_inferred_names.py  test_blueprint_integrity.py  test_blueprint_loader.py  test_blueprints.py  test_cachebox_integration.py  test_client_config_loader.py  test_collections_integrity.py  test_compact_api.py  test_compression.py  test_config_validation.py  test_context.py  test_crypto.py  test_deep_reliability.py  test_dispatcher.py  test_dispatcher_extended.py  test_engine.py  test_engine_ratelimit.py  test_envelope_encryption_deep.py  test_error_handling.py  test_executor.py  test_executor_result_field.py  test_executor_tracing.py  test_fast_filter_integration.py  test_final_api_precision.py  test_final_security_and_limits.py  test_final_security_audit.py  test_fix_ported_features.py  test_fix_validation.py  test_graceful_shutdown.py  test_handlers.py  test_handlers_sts.py  (+43 more)
