# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at http://mozilla.org/MPL/2.0/.
#
# Copyright (c) 2025-2026 Dmitrii Gagarin aka madgagarin


[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "avtomatika"
version = "1.0b27"
description = "A state-machine based orchestrator for long-running AI and other jobs."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Dmitrii Gagarin aka madgagarin", email = "madgagarin@gmail.com" },
]
keywords = ["orchestrator", "state-machine", "workflow", "distributed", "ai", "llm", "rxon", "hln"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = [
    "rxon==1.0b14",
    "fast-magic-filter~=1.0.0",
    "aiohttp~=3.14.1",
    "python-json-logger~=4.1.0",
    "graphviz~=0.21.0",
    "zstandard~=0.25.0",
    "orjson~=3.11.9",
    "cryptography~=49.0.0",
    "cachebox~=6.1.2",
]

[project.optional-dependencies]
redis = ["redis~=8.0.1"]
s3 = ["obstore~=0.11.0", "aiofiles~=25.1.0"]
history = ["aiosqlite~=0.22.0", "asyncpg~=0.31.0"]
telemetry = [
    "opentelemetry-api~=1.43.0",
    "opentelemetry-sdk~=1.43.0",
    "opentelemetry-exporter-otlp~=1.43.0",
    "opentelemetry-instrumentation-aiohttp-client~=0.59b0",
]
all = [
    "avtomatika[redis]",
    "avtomatika[s3]",
    "avtomatika[history]",
    "avtomatika[telemetry]",
]
test = [
    "avtomatika[all]",
    "pytest~=9.1.0",
    "pytest-asyncio~=1.4.0",
    "fakeredis~=2.36.0",
    "pytest-aiohttp~=1.1.0",
    "pytest-mock~=3.15.0",
    "aioresponses~=0.7.0",
    "docker~=7.1.0",
]

[project.urls]
"Homepage" = "https://github.com/avtomatika-ai/avtomatika"
"Bug Tracker" = "https://github.com/avtomatika-ai/avtomatika/issues"

[tool.setuptools.package-data]
"avtomatika" = ["api.html", "py.typed"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.exclude-package-data]
"*" = ["tests*", "advanced_architecture_proposals.md"]

[tool.pytest.ini_options]
markers = [
    "e2e: marks tests as end-to-end tests",
]
filterwarnings = [
]

[tool.ruff]
src = ["src", "tests"]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "A", "SIM", "C4", "PLC", "UP", "TID"]
ignore = ["TID252"]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = false

[tool.ruff.lint.isort]
known-first-party = ["avtomatika"]

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.11"
packages = ["avtomatika"]
disallow_incomplete_defs = true
disallow_untyped_calls = true
no_implicit_optional = true
ignore_missing_imports = true
follow_imports = "skip"
warn_unused_ignores = true
warn_return_any = true
disallow_any_unimported = false
exclude = ["tests/"]
